--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "20.11.1"
   },
   "repository": {
     "type": "git",
