--- a/web.config
+++ b/web.config
@@ -1,27 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
-    <!-- Tell IIS to route all requests to Node via iisnode -->
     <handlers>
       <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
-
     <rewrite>
       <rules>
-        <rule name="NodeRule" stopProcessing="true">
+        <rule name="Node" stopProcessing="true">
           <match url=".*" />
           <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
     </rewrite>
-
-    <!-- Avoid blocking /bin (iisnode uses it) -->
-    <security>
-      <requestFiltering>
-        <hiddenSegments>
-          <remove segment="bin"/>
-        </hiddenSegments>
-      </requestFiltering>
-    </security>
+    <iisnode loggingEnabled="true" devErrorsEnabled="true" />
   </system.webServer>
 </configuration>
