--- a/web.config
+++ b/web.config
@@ -2,16 +2,25 @@
 <configuration>
   <system.webServer>
     <handlers>
+      <!-- Route all requests to Node via iisnode -->
       <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
     <rewrite>
       <rules>
-        <rule name="Node" stopProcessing="true">
+        <rule name="NodeRule" stopProcessing="true">
           <match url=".*" />
           <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
     </rewrite>
-    <iisnode loggingEnabled="true" devErrorsEnabled="true" />
+    <!-- Avoid logging permission issues -->
+    <iisnode loggingEnabled="false" devErrorsEnabled="true" />
+    <security>
+      <requestFiltering>
+        <hiddenSegments>
+          <remove segment="bin"/>
+        </hiddenSegments>
+      </requestFiltering>
+    </security>
   </system.webServer>
 </configuration>
