--- a/web.config
+++ b/web.config
@@ -2,8 +2,7 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <!-- Route all requests to Node via iisnode -->
-      <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
     </handlers>
     <rewrite>
       <rules>
@@ -13,14 +12,8 @@
         </rule>
       </rules>
     </rewrite>
-    <!-- Avoid logging permission issues -->
-    <iisnode loggingEnabled="false" devErrorsEnabled="true" />
-    <security>
-      <requestFiltering>
-        <hiddenSegments>
-          <remove segment="bin"/>
-        </hiddenSegments>
-      </requestFiltering>
-    </security>
+    <iisnode loggingEnabled="true"
+             devErrorsEnabled="true"
+             logDirectory="D:\home\LogFiles\iisnode" />
   </system.webServer>
 </configuration>
