--- a/web.config
+++ b/web.config
@@ -12,8 +12,7 @@
         </rule>
       </rules>
     </rewrite>
-    <iisnode loggingEnabled="true"
-             devErrorsEnabled="true"
-             logDirectory="D:\home\LogFiles\iisnode" />
+    <!-- enable logs to see real Node errors -->
+    <iisnode loggingEnabled="true" devErrorsEnabled="true" logDirectory="D:\home\LogFiles\iisnode" />
   </system.webServer>
 </configuration>
