--- a/.github/workflows/main_ng-demo-backend.yml
+++ b/.github/workflows/main_ng-demo-backend.yml
@@ -1,65 +1,64 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - ng-demo-backend
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      - name: Set up Node.js 20.11.1
+        uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '20.11.1'
+          cache: 'npm'
 
-      - name: npm install, build, and test
+      - name: Install deps
+        run: npm ci
+
+      - name: Build (if present)
+        run: npm run build --if-present
+
+      - name: Create deployment zip
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-      
-      - name: Upload artifact for deployment job
+          powershell -Command "Compress-Archive -Path * -DestinationPath app.zip"
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: app.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
-      - name: Login to Azure
+
+      - name: Azure login (federated)
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_04E0DAF0E6E84A2C9EABC872B618F5B8 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FF1105EF6E0D4C7D9CB568D66524BF35 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FF7CBC82ECFE4F8EBAF90F511F1E5DFE }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
         with:
-          app-name: 'ng-demo-backend'
-          slot-name: 'Production'
-          package: .
-          
+          app-name: ng-demo-backend
+          slot-name: Production
+          package: app.zip
