--- a/web.config
+++ b/web.config
@@ -2,7 +2,8 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+      <!-- Point IIS to your Node entry -->
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
     <rewrite>
       <rules>
@@ -12,7 +13,10 @@
         </rule>
       </rules>
     </rewrite>
-    <!-- enable logs to see real Node errors -->
-    <iisnode loggingEnabled="true" devErrorsEnabled="true" logDirectory="D:\home\LogFiles\iisnode" />
+
+    <!-- Enable iisnode logs to a writable location -->
+    <iisnode loggingEnabled="true"
+             devErrorsEnabled="true"
+             logDirectory="D:\home\LogFiles\iisnode" />
   </system.webServer>
 </configuration>
