--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "type": "git",
     "url": "git+https://github.com/chankamaa/Yoors-Angular-Backend.git"
   },
-  "keywords": ["nodejs", "express", "mongodb", "api", "angular"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "mongodb",
+    "api",
+    "angular"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -23,9 +29,12 @@
   },
   "homepage": "https://github.com/chankamaa/Yoors-Angular-Backend#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
